# thin-workflow-harness

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
crates/harness/: Cargo.toml
crates/harness-ckg/: Cargo.toml
crates/harness-ckg/src/ckg/lsp/: client.rs  lang.rs  refs_lang.rs  refs_parse.rs  tested.rs  tested_lang.rs  tested_ts.rs
crates/harness-ckg/src/lsp_daemon/: server.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: event.rs  handlers.rs  handlers2.rs  handlers3.rs  handlers_install.rs  handlers_stats.rs  lib.rs  metrics.rs  paths.rs  questions.rs  questions_tests.rs  run_lock.rs  spec.rs  state.rs  status_view.rs
crates/harness-core/src/detect/: ci.rs  lang.rs  mod.rs
crates/harness-core/src/gate/: clean_gates.rs  file_gates.rs  glob.rs  mod.rs  spec_gates.rs  state_gates.rs  workflow_diff.rs
crates/harness-core/src/handlers_init/: mod.rs
crates/harness-core/src/runtime/: anthropic.rs  api_run.rs  apply.rs  auth.rs  auth_credentials.rs  context.rs  fork_join.rs  http_client.rs  interceptor.rs  mod.rs  security_scan.rs  system_prompt.rs  tool_schemas.rs  tools.rs  tools_query.rs
crates/harness-core/src/runtime/api_runner/: apply_dispatch.rs  branch.rs  branch_apply.rs  branch_apply_tests.rs  guards.rs  mod.rs
crates/harness-core/src/runtime/api_worker/: apply_loop.rs  drive.rs  mod.rs  retry.rs
crates/harness-core/src/scaffold/: docs_tmpl.rs  mod.rs  regression_tmpl.rs  workflow_tmpl.rs
crates/harness-core/src/scaffold/skill_templates/: 01-research.md  02-plan.md  03-characterize.md  04-implement.md  05-test.md  06-security.md  07-review.md  08-join.md  09-docdesign.md  10-design-pre.md  11-verify.md  12-land.md  p01-research.md  p02-capture.md  p03-differential.md  p04-reconcile.md  p05-coverage.md
crates/harness-core/src/scaffold/templates/: CONTEXT-FORMAT.md  equivalence.json  input_space.json  preservation_workflow.toml  security_skill.md  security_workflow.toml
crates/harness-core/src/scaffold/tool_templates/: capture_oracle.mjs  catalog_gate.mjs  characterize_gate.mjs  coverage_gate.mjs  db-assert.mjs  differential_gate.mjs  mutate-diff.mjs  okf_check.mjs  preservation_lib.mjs  reconcile_gate.mjs  regression_gate.mjs
crates/harness-core/src/workflow/: validate.rs
crates/harness-lspd/: Cargo.toml
crates/harness-lspd/src/: cli_query.rs  handlers_outline.rs  handlers_refs.rs  handlers_tested.rs  main.rs
crates/harness-lspd/tests/: bench_lsp_reuse.rs  cli_query_facade.rs  daemon_admin_smoke.rs  daemon_auto_spawn_smoke.rs  daemon_health_smoke.rs  daemon_smoke.rs  find_symbol.rs  lsp_go_refs_callers.rs  lsp_py_find_symbol.rs  lsp_refs.rs  lsp_ts_refs_callers.rs  tools_query.rs
crates/harness-lspd/tests/fixtures/sample_workspace_py/: pyproject.toml
crates/harness-lspd/tests/fixtures/sample_workspace_rust/: Cargo.toml
crates/harness-lspd/tests/fixtures/sample_workspace_rust/src/: use_user.rs
crates/harness/src/: cli.rs  cli_daemon.rs  cli_dispatch.rs  handlers_closure.rs  handlers_find_symbol.rs  handlers_impacted.rs  handlers_outline.rs  handlers_refs.rs  handlers_tested.rs  lib.rs  main.rs
crates/harness/src/ckg/: mod.rs
crates/harness/src/ckg/lsp/: closure.rs
crates/harness/src/lsp_daemon/: dispatch.rs
crates/harness/tests/: api_worker_cache.rs  append_only.rs  auth.rs  cli_flow.rs  cli_query_facade.rs  daemon_auto_spawn_smoke.rs  daemon_smoke.rs  fork_join.rs  fork_join_dispatch.rs  gate.rs  init.rs  interceptor.rs  lsp_go_find_symbol.rs  lsp_go_refs_callers.rs  lsp_impacted_tested.rs  lsp_py_find_symbol.rs  lsp_ts_find_symbol.rs  lsp_ts_refs_callers.rs  metrics.rs  skill_command_drift.rs  state.rs  tools_query.rs
crates/harness/tests/fixtures/: script_fork_jump.toml  script_happy.toml  script_onreject.toml  script_respawn.toml  spec.toml  spec_fork.toml  workflow.toml
crates/harness/tests/fixtures/repo_ci/: Cargo.toml
crates/harness/tests/fixtures/repo_node/: package-lock.json
crates/harness/tests/fixtures/repo_rust/: Cargo.toml
crates/harness/tests/fixtures/sample_workspace_ts/src/: user.ts
crates/harness/tests/fixtures/skills/: n2.md
crates/lsp-daemon/: Cargo.toml
crates/lsp-daemon/src/: handlers_closure.rs  lib.rs
crates/lsp-daemon/tests/: lsp_closure.rs  lsp_impacted_tested.rs  lsp_refs.rs
crates/lsp-daemon/tests/fixtures/sample_rust/: lib.rs
crates/lsp-daemon/tests/fixtures/sample_workspace_rust/src/: inline_tests.rs
crates/lsp-daemon/tests/fixtures/sample_workspace_ts/src/: user.test.ts
docs/: ckg.md  deep-grilling-design.md  design-writing-design.md  example-walkthrough.md  failure-modes.md  host-capabilities.md  implementation.md  index.md  log.md  onboarding.md  operations.md  schemas.md  skill-templates.md  skillify.md  target-codebase-structure.md  worker-context.md
examples/hooks/: README.md  forbidden-word-guard.py  loop-detector.py  phase-edit-guard.py
examples/skill-tools-archive/: README.md
scripts/: read-lsp-nudge.sh
skills/: 01-research.md  02-plan.md  03-implement.md  04-test.md  05-review.md
skills/run/: SKILL.md
skills/thin-workflow-harness/: SKILL.md
src/: cli.rs  cli_daemon.rs  cli_dispatch.rs  cli_index.rs  cli_query.rs  commands.rs  event.rs  gate.rs  gates.rs  handlers.rs  handlers2.rs  handlers3.rs  handlers_advance.rs  handlers_closure.rs  handlers_find_symbol.rs  handlers_impacted.rs  handlers_refs.rs  handlers_stats.rs  handlers_tested.rs  lib.rs  main.rs  metrics.rs  paths.rs  phases.rs  state.rs  status_view.rs  workflow.rs
src/ckg/: mod.rs  outline.rs  test_attrs.rs  test_attrs_go.rs  test_attrs_py.rs  test_mod_scan.rs
tests/: api_worker_cache.rs  append_only.rs  auth.rs  bench_lsp_reuse.rs  cli_query_facade.rs  daemon_admin_smoke.rs  daemon_health_smoke.rs  daemon_smoke.rs  find_symbol.rs  fork_join.rs  gate.rs  init.rs  interceptor.rs  lsp_closure.rs  lsp_impacted_tested.rs  lsp_py_refs_callers.rs  lsp_refs.rs  lsp_ts_find_symbol.rs  lsp_ts_refs_callers.rs  metrics.rs  outline.rs  runtime.rs  state.rs  tools_query.rs
(+131 files in other folders)
