[workspace]
members = [
    "crates/harness-core",
    "crates/harness",
]
exclude = [
    "crates/harness/tests/fixtures/repo_rust",
    "crates/harness/tests/fixtures/repo_node",
    "crates/harness/tests/fixtures/repo_ci",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
