[package]
name = "thin-workflow-harness-core"
version.workspace = true
edition.workspace = true
description = "Thin workflow runner core for LLM agent loops. Event-log driven state derivation + deterministic gate evaluation."
license = "MIT"
repository = "https://github.com/USER/thin-workflow-harness"
readme = "../../README.md"
keywords = ["llm", "workflow", "claude", "agent", "harness"]
categories = ["command-line-utilities", "development-tools"]
authors = ["thin-workflow-harness contributors"]

[lib]
name = "thin_workflow_harness_core"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
