[package]
name = "thin-workflow-harness"
version.workspace = true
edition.workspace = true
description = "thin-workflow-harness binary ── CLI + CKG + LSP daemon"

[lib]
name = "thin_workflow_harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
thin-workflow-harness-core = { path = "../harness-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
ureq.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
lsp-types.workspace = true

[dev-dependencies]
tempfile = "3"
