[package]
name = "thin-workflow-harness"
version.workspace = true
edition.workspace = true
description = "thin-workflow-harness workflow runner binary (harness.exe)"

[lib]
name = "thin_workflow_harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
thin-workflow-harness-core = { path = "../harness-core" }
clap.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
