[package]
name = "thin-workflow-harness"
version.workspace = true
edition.workspace = true
description = "Thin workflow runner binary (harness.exe) for LLM agent loops. Drives workflow.toml via deterministic gates + append-only event log."
license = "MIT"
repository = "https://github.com/USER/thin-workflow-harness"
readme = "../../README.md"
keywords = ["llm", "workflow", "claude", "agent", "harness"]
categories = ["command-line-utilities", "development-tools"]
authors = ["thin-workflow-harness contributors"]

[lib]
name = "thin_workflow_harness"
path = "src/lib.rs"

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
thin-workflow-harness-core = { path = "../harness-core", version = "0.1.0" }
clap.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
