[package]
name = "thin-workflow-harness-lspd"
version = "0.1.0"
edition = "2021"
description = "thin-workflow-harness LSP daemon + CKG primitive CLI binary (harness-lspd)"

[lib]
name = "thin_workflow_harness_lspd"
path = "src/lib.rs"

[[bin]]
name = "harness-lspd"
path = "src/main.rs"

[dependencies]
thin-workflow-harness-ckg = { path = "../harness-ckg" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
